fixed table whitespace and cursor

--- a/_scss/pages/_table.scss
+++ b/_scss/pages/_table.scss
@@ -59,6 +59,7 @@
 
 			th {
 				color: $font-special;
+				white-space: nowrap;
 
 				.fa:after {
 					content: "\f107";
@@ -74,6 +75,7 @@
 
 				&:hover {
 					background: #eee;
+					cursor: pointer;
 				}
 			}
     }
